--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
+			<h2>CANDIDATOS DO PARTIDO REDE</h2>
+			<p>Clique no mapa para ver os candidatos de cada Estado</p>
 			<div>
 			
 			  <svg version="1.1" id="svg-map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="450px" height="460px" viewBox="0 0 450 460" enable-background="new 0 0 450 460" xml:space="preserve">
@@ -342,7 +344,7 @@
 				</g>
 			  </svg>
 			</div>
-
+		
 			<table id="table_id" class="table est ac" style="display:none;">
 				<thead>
 					<tr>
