corrigido falha na tabela mato grosso

--- a/index.html
+++ b/index.html
@@ -780,21 +780,21 @@
 					<tr><td>Mato Grosso</td><td>Deputado Federal</td><td>BISPO MARCELLO MOURA</td><td>1830</td></tr>
 					<tr><td>Mato Grosso</td><td>Deputado Federal</td><td>Maurício Santino</td><td>1800</td></tr>
 					<tr><td>Mato Grosso</td><td>Deputado Federal</td><td>GOMES DO PÃO</td><td>1881</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>Mato Grosso</td><td>PROFESSORA JANE CRISTINA</td><td>18118</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>Mato Grosso</td><td>LAILA DUTRA</td><td>18123</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>Mato Grosso</td><td>PROF. MÁRCIA BEATRIZ</td><td>18000</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>Mato Grosso</td><td>WÂNIA AMORIM</td><td>18888</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>ANDRÉ LUIZ</td><td>18818</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>EVANGELISTA TONINHO</td><td>18111</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>CÁSSIO MELLO</td><td>18001</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>NILDÃO DA TOYOTA AMARELA</td><td>18333</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>JARBAS CARVALHO</td><td>18800</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>JEFFERSON COSTA</td><td>18102</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>JOÁS NALINI</td><td>18999</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>SIDNEI VARANIS</td><td>18018</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>VANDERLEI FLORENCIO</td><td>18234</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>Mato Grosso</td><td>IVAN GONÇALVES</td><td>18020</td></tr>
-					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>Mato Grosso</td><td>DÉBORA BORGES</td><td>18777</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>PROFESSORA JANE CRISTINA</td><td>18118</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>LAILA DUTRA</td><td>18123</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>PROF. MÁRCIA BEATRIZ</td><td>18000</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>WÂNIA AMORIM</td><td>18888</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>ANDRÉ LUIZ</td><td>18818</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>EVANGELISTA TONINHO</td><td>18111</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>CÁSSIO MELLO</td><td>18001</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>NILDÃO DA TOYOTA AMARELA</td><td>18333</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>JARBAS CARVALHO</td><td>18800</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>JEFFERSON COSTA</td><td>18102</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>JOÁS NALINI</td><td>18999</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>SIDNEI VARANIS</td><td>18018</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>VANDERLEI FLORENCIO</td><td>18234</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputado Estadual<tr><td>IVAN GONÇALVES</td><td>18020</td></tr>
+					<tr><td>Mato Grosso</td><td>Deputada Estadual<tr><td>DÉBORA BORGES</td><td>18777</td></tr>
 				</tbody>
 			</table>
 
