--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h2>CANDIDATOS DO PARTIDO REDE</h2>
-			<p>Clique no mapa para ver os candidatos de cada Estado</p>
+			<p>Clique no mapa para ver os candidatos de cada Estado nas Eleições 2018</p>
 			<div>
 			
 			  <svg version="1.1" id="svg-map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="450px" height="460px" viewBox="0 0 450 460" enable-background="new 0 0 450 460" xml:space="preserve">
