estados sem candidatura

--- a/index.html
+++ b/index.html
@@ -344,6 +344,22 @@
 				</g>
 			  </svg>
 			</div>
+
+			<table id="table_id" class="table est pa" style="display:none;">
+				<thead>
+					<tr>
+						<th>Não houveram candidaturas para este Estado</th>
+					</tr>
+				</thead>
+			</table>
+
+			<table id="table_id" class="table est rg" style="display:none;">
+				<thead>
+					<tr>
+						<th>Não houveram candidaturas para este Estado</th>
+					</tr>
+				</thead>
+			</table>
 		
 			<table id="table_id" class="table est ac" style="display:none;">
 				<thead>
