--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,7 @@
 					<tr><td>Pernambuco</td><td>Deputado Federal</td><td>Coronel Sérgio</td><td>1811</td></tr>
 					<tr><td>Pernambuco</td><td>Deputado Federal</td><td>Jonas Pereirão</td><td>1840</td></tr>
 					<tr><td>Pernambuco</td><td>Deputado Federal</td><td>Marconi da Galinha</td><td>1833</td></tr>
-					<tr><td>Pernambuco</td><td>Deputada Federal</td><td>Fia do Posto</td><td1810</td></tr>
+					<tr><td>Pernambuco</td><td>Deputada Federal</td><td>Fia do Posto</td><td>1810</td></tr>
 					<tr><td>Pernambuco</td><td>Deputado Federal</td><td>Severino Oliveira</td><td>1802</td></tr>
 					<tr><td>Pernambuco</td><td>Deputado Federal</td><td>Val do Povão</td><td>1888</td></tr>
 					<tr><td>Pernambuco</td><td>Deputado Federal</td><td>Jaribe Carneiro (Di Nobaia)</td><td>1801</td></tr>
