--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
 		<div class="col-md-12">
 			<h2>CANDIDATOS DO PARTIDO REDE</h2>
 			<p>Clique no mapa para ver os candidatos de cada Estado nas Eleições 2018</p>
+			<table id="table_id" class="table" style="display:block;">
+				<thead>
+					<tr>
+						<th>CANDIDATURA</th>
+						<th>NOME NA URNA</th>
+						<th>NÚMERO</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr><td>Predidente, Vice-Presidente </td><td> MARINA SILVA, EDUARGO JORGE</td><td>18</td></tr>
+				</tbody>
+			</table>
+			
 			<div>
 			
 			  <svg version="1.1" id="svg-map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="450px" height="460px" viewBox="0 0 450 460" enable-background="new 0 0 450 460" xml:space="preserve">
