inserido twitter de 2 candidatos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr><td>Predidente, Vice-Presidente </td><td> MARINA SILVA, EDUARGO JORGE</td><td>18</td></tr>
+					<tr><td>Predidente, Vice-Presidente </td><td> MARINA SILVA, EDUARDO JORGE</td><td>18</td></tr>
 				</tbody>
 			</table>
 			
@@ -269,7 +269,7 @@
 					C276.085,411.866,233.534,382.918,231.029,383.959z"></path>
 					<text transform="matrix(1 0 0 1 266.9111 387.7646)" fill="#FFFFFF">SC</text>
 				  </a>
-				  <a xlink:href="#riograndedosul" class="estado" name="Rio Grande do Sul" code="43" sigla="rg">
+				  <a xlink:href="#riograndedosul" class="estado" name="Rio Grande do Sul" code="43" sigla="rs">
 					<path stroke="#FFFFFF" stroke-width="1.0404" stroke-linecap="round" stroke-linejoin="round" d="M191.236,416.881
 					c0.52-2.684,7.38-8.409,9.477-10.351c0.37-0.359,8.599-10.08,9.174-8.329c-1.301-3.89,2.781-1.589,3.917-4.819
 					c0.26-0.521,7.04-4.821,7.109-4.795c1.436-0.191,6.721-3.695,7.421-3.257c1.204-2.028,8.927-1.479,8.653-0.824
@@ -366,14 +366,6 @@
 				</thead>
 			</table>
 
-			<table id="table_id" class="table est rg" style="display:none;">
-				<thead>
-					<tr>
-						<th>Não houveram candidaturas para este Estado</th>
-					</tr>
-				</thead>
-			</table>
-		
 			<table id="table_id" class="table est ac" style="display:none;">
 				<thead>
 					<tr>
@@ -391,7 +383,7 @@
 					<tr><td>Acre</td><td>Deputada Estadual</td><td>Accioly</td><td>18888</td><tr>
 					<tr><td>Acre</td><td>Deputada Estadual</td><td>Vanessa Facundes</td><td>18018</td></tr>
 					<tr><td>Acre</td><td>Deputada Estadual</td><td>Claudilene</td><td>18012</td></tr>
-					<tr><td>Acre</td><td>Deputado Estadual</td><td>Gabriel Santos</td><td>18000</td></tr>
+					<tr><td>Acre</td><td>Deputado Estadual</td><td><a href="https://twitter.com/GabrielRBCO" target="_blank">Gabriel Santos</a></td><td>18000</td></tr>
 					<tr><td>Acre</td><td>Deputado Estadual</td><td>Geilson Uchoa</td><td>18118</td></tr>
 					<tr><td>Acre</td><td>Deputado Estadual</td><td>Maik da UFAC</td><td>18181</td></tr>
 					<tr><td>Acre</td><td>Deputado Estadual</td><td>Pastor Roberto</td><td>18188</td></tr>
@@ -1172,7 +1164,7 @@
 					<tr><td>Rio Grande do Sul</td><td>Deputado Federal</td><td>João Derly</td><td>1818</td></tr>
 					<tr><td>Rio Grande do Sul</td><td>Deputado Federal</td><td>Professor Jamal</td><td>1807</td></tr>
 					<tr><td>Rio Grande do Sul</td><td>Deputado Federal</td><td>Marco Lico</td><td>1822</td></tr>
-					<tr><td>Rio Grande do Sul</td><td>Deputado Federal</td><td>Reginaldo Bacci</td><td>1801</td></tr>
+					<tr><td>Rio Grande do Sul</td><td>Deputado Federal</td><td><a href="https://twitter.com/BacciReginaldo" target="_blank">Reginaldo Bacci</a></td><td>1801</td></tr>
 					<tr><td>Rio Grande do Sul</td><td>Deputada Estadual</td><td>Gabriela dos Santos</td><td>18444</td></tr>
 					<tr><td>Rio Grande do Sul</td><td>Deputada Estadual</td><td>Greice Rangel</td><td>18028</td></tr>
 					<tr><td>Rio Grande do Sul</td><td>Deputada Estadual</td><td>Rafaela Nitz</td><td>18181</td></tr>
