inserido candidaturas do pará

--- a/index.html
+++ b/index.html
@@ -358,14 +358,6 @@
 			  </svg>
 			</div>
 
-			<table id="table_id" class="table est pa" style="display:none;">
-				<thead>
-					<tr>
-						<th>Não houveram candidaturas para este Estado</th>
-					</tr>
-				</thead>
-			</table>
-
 			<table id="table_id" class="table est ac" style="display:none;">
 				<thead>
 					<tr>
@@ -908,6 +900,37 @@
 					<tr><td>Minas Gerais</td><td>Deputado Estadual</td><td>CARLOS WILSON</td><td>18002</td></tr>
 					<tr><td>Minas Gerais</td><td>Deputado Estadual</td><td>LAGARTIXA DO PLATISCO</td><td>18016</td></tr>
 					<tr><td>Minas Gerais</td><td>Deputada Estadual</td><td>ZU</td><td>18222</td></tr>
+				</tbody>
+			</table>
+			
+			<table id="table_id" class="table est pa" style="display:none;">
+				<thead>
+					<tr>
+						<th>ESTADO</th>
+						<th>CANDIDATURA</th>
+						<th>NOME NA URNA</th>
+						<th>NÚMERO</th>
+ 					</tr>
+ 				</thead>
+ 				<tbody>
+					<tr><td>Paraíba</td><td>Deputado Estadual</td><td>CHIÓ</td><td>18789</td></tr>
+					<tr><td>Pará</td><td>Deputado Federal</td><td>Professor Gileno</td><td>1888</td></tr>
+					<tr><td>Pará</td><td>Deputado Federal</td><td>Tiago Fernandes</td><td>1823</td></tr>
+					<tr><td>Pará</td><td>Deputado Federal</td><td>Riches Federal Força e Honra</td><td>1807</td></tr>
+					<tr><td>Pará</td><td>Deputado Federal</td><td>Professor Iran</td><td>1800</td></tr>
+					<tr><td>Pará</td><td>Deputada Federal</td><td>Darcilete Canté</td><td>1818</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Osvaldo Mota</td><td>18188</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>PETECA</td><td>18555</td></tr>
+					<tr><td>Pará</td><td>Deputada Estadual</td><td>Paula Guerra</td><td>18008</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Professor Miguel</td><td>18602</td></tr>
+					<tr><td>Pará</td><td>Deputada Estadual</td><td>Keyla Barros</td><td>18222</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Alexandre Mesquita</td><td>18000</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Prof. Markão</td><td>18888</td></tr>
+					<tr><td>Pará</td><td>Deputada Estadual</td><td>Delmira Barral</td><td>18444</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Natureza Com Certeza</td><td>18999</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Gusmão</td><td>18007</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Marcelo Santos</td><td>18260</td></tr>
+					<tr><td>Pará</td><td>Deputado Estadual</td><td>Professor Mauricio Macedo</td><td>18123</td></tr>
 				</tbody>
 			</table>
 
